# web-office-toolbox

./: .gitignore  IDEA_FIX.md  LICENSE  README-ELECTRON.md  README.md  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js
.trae/documents/: plan_20251223_035210.md
electron/: main.js  preload.js  vite.config.js
public/workers/: pdf-generator.js
server/: app.js
server/routes/: tool.js  upload.js
server/services/: toolRegistry.js
server/tools/image-to-pdf/: index.js  routes.js  service.js
server/tools/tool-excel/: config.json
server/tools/tool-image/: config.json
server/tools/tool-pdf/: config.json
src/: App.vue  main.js  router.js  router.ts  style.css  test-vue-types.vue
src/app/: App.vue
src/components/: ImageUploader.vue  NotificationSnackbar.vue  PDFPreview.vue  PDFSecureUpload.vue  PageTransition.vue  ToolCard.vue  ToolGrid.vue  UserAvatar.vue
src/config/: tools-config.js
src/pages/: Home.vue  ToolContainer.vue  ToolPage.vue
src/plugins/: vuetify.js
src/route/: router.js
src/services/: api.ts
src/tools/: CREATE_NEW_TOOL.md  README.md
src/tools/ai-prompt-generator/: index.vue
src/tools/base64-converter/: index.vue
src/tools/code-analyzer/: index.vue
src/tools/color-generator/: index.vue
src/tools/example-counter/: index.vue
src/tools/image-compressor/: index.vue
src/tools/image-split/: index.vue
src/utils/: electron-utils.js
src/utils-scripts/: ImageHelper.js  PdfHelper.js
wasm/: build-wasm.ps1
wasm/image-converter-wasm/: Cargo.toml
wasm/image-converter-wasm/src/: lib.rs
(+118 files in other folders)
