[package]
name = "image-converter-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly image format converter - decode/encode PNG, JPEG, WebP and more"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.25"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
